# sbbs

./: .gitattributes  .gitignore  .gitlab-ci-unix.yml  .gitlab-ci.yml  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  lbshell.js  rip_lib.js
src/: .editorconfig  CLAUDE.md  CMakeLists.txt  Directory.Build.targets  Makefile  Synchronet.workspace  cleanall.bat  cleanall.sh  makeall.bat  makeall.cmd  sbbs-release.bat  sbbs_release.bat  uncrustify.cfg  wmakeall.bat
src/ZuulTerm/: Protocol.txt  application.ini  zt  zt.cmd
src/cioxtrn/: CMakeLists.txt  Makefile  cioxtrn.c  cioxtrn.txt  objects.mk  targets.mk
src/comio/: CMakeLists.txt  comio.c  comio.h  comio.props  comio.vcxproj  comio_nix.c  comio_win32.c
src/conio/: CMakeLists.txt  Common.bmake  Common.gmake  Common.make  GNUmakefile  Makefile  OverhaulNotes.txt  SDLMain.m  SDL_win32_main.c  TODO.txt  allfonts.c  allfonts.h  ansi_cio.c  ansi_cio.h  bitmap_con.c  bitmap_con.h  cg_cio.h  cg_cio.m  cg_events.m  ciolib.adoc  ciolib.c  ciolib.h  ciolib.manifest  ciolib.rc  conio.c  conio.dsp  conio.h  conio.props  conio.vcproj  conio.vcxproj  conio_gdi.props  conio_gdi.vcxproj  conio_sdl.dsp  conio_sdl.props  conio_sdl.vcproj  conio_sdl.vcxproj  console.c  console.h  conv2vid.pl  cterm.adoc  (+78 more)
src/crt/: file_id.diz  filelist.txt  install.bat  other.txt  readme.1st  remove.bat
src/doors/: .gitignore  UNIFIED_MP_LOBBY_DESIGN.md  UNIFIED_MP_LOBBY_PLAN.md  build.bat  build.sh
src/encode/: CMakeLists.txt  Common.make  GNUmakefile  README.md  base64.c  base64.h  cp437_unicode_tbl.c  cp437_unicode_tbl.h  cp437_utf8_tbl.c  cp437_utf8_tbl.h  encode.props  endian.hpp  hex.c  hex.h  lzh.c  lzh.h  objects.mk  pascal_types.hpp  targets.mk  utf8.c  utf8.h  uucode.c  uucode.h  yenc.c  yenc.h
src/hash/: CMakeLists.txt  Common.make  GNUmakefile  README.md  crc16.c  crc16.h  crc32.c  crc32.h  crc32_slicing.h  hash.props  md5.c  md5.h  objects.mk  sha1.c  sha1.h  sha256.c  sha256.h  targets.mk
src/newifc/: GNUmakefile  alltests.c  genapi.c  internal_macros.h  label.c  newifc_nongen.c  newifc_nongen_after.c  root_window.c  sizer.c  sizer_cell.c
src/odoors/: .gitignore  DOOR.CFG  DORINFO1.DEF  DOS.mak  FILE_ID.DIZ  GNUmakefile  ODAuto.c  ODBlock.c  ODCFile.c  ODCmdLn.c  ODCom.c  ODCom.h  ODCore.c  ODCore.h  ODDrBox.c  ODEdStr.c  ODEdit.c  ODEmu.c  ODFrame.c  ODFrame.h  ODGen.h  ODGetIn.c  ODGraph.c  ODInEx.h  ODInEx1.c  ODInEx2.c  ODInQue.c  ODInQue.h  ODKrnl.c  ODKrnl.h  ODList.c  ODLog.c  ODMulti.c  ODOORS62.TXT  ODPCB.c  ODPlat.c  ODPlat.h  ODPopup.c  ODPrntf.c  ODRA.c  (+39 more)
src/sbbs2/: ars.c  ars_defs.h  atcodes.c  bulkmail.c  chat.c  chk_ar.c  cmdshell.h  comio.c  con_hi.c  con_in.c  con_mid.c  con_out.c  data.c  data_ovl.c  email.c  etext.c  etext.h  exec.c  execfile.c  execfunc.c  execmisc.c  execmsg.c  fido.c  file.c  file_ovl.c  gen_defs.h  genetext.c  getnode.c  getuser.c  initdata.c  listfile.c  login.c  logio.c  logon.c  logout.c  mail.c  main.c  main_ovl.c  main_sec.c  main_wfc.c  (+42 more)
src/sbbs3/: .gitignore  64bit.txt  CLAUDE.md  CMakeLists.txt  Common.gmake  Common.make  Directory.Build.targets  GNUmakefile  Makefile  Makefile.bor  Makefile.gnu  README.FreeBSD  addfiles.c  addfiles.dsp  addfiles.vcproj  addfiles.vcxproj  adduser.c  adduser.dsp  allusers.c  allusers.dsp  allusers.vcproj  allusers.vcxproj  ans2asc.c  ans2asc.dsp  ans2asc.vcproj  ans2asc.vcxproj  ans2msg.c  ansi_parser.cpp  ansi_parser.h  ansi_terminal.cpp  ansi_terminal.h  ansiterm.cpp  answer.cpp  ars.c  ars_defs.h  asc2ans.c  asc2ans.dsp  asc2ans.vcproj  asc2ans.vcxproj  atcodes.cpp  (+453 more)
src/sexpots/: CMakeLists.txt  GNUmakefile  build.bat  file_id.diz  objects.mk  release.bat  sexpots.c  sexpots.dsp  sexpots.dsw  sexpots.sln  sexpots.vcxproj  targets.mk
src/sftp/: CMakeLists.txt  Common.make  GNUmakefile  objects.mk  sftp.c  sftp.h  sftp.props  sftp.vcxproj  sftp_attr.c  sftp_client.c  sftp_common.c  sftp_outcome.c  sftp_pkt.c  sftp_server.c  sftp_static.h  sftp_str.c  targets.mk
src/smblib/: CMakeLists.txt  Common.gmake  Common.make  GNUmakefile  Makefile  objects.mk  smbadd.c  smballoc.c  smbdefs.h  smbdump.c  smbfile.c  smbhash.c  smblib.c  smblib.cbp  smblib.dsp  smblib.h  smblib.props  smblib.vcproj  smblib.vcxproj  smblib_dll.dsp  smblib_mt.dsp  smbstr.c  smbtxt.c  targets.mk
src/ssh/: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.md  NOTES.md  README.md  RULES.md  TODO.md  all.c  api-design-4254.md  audit-4250.md  audit-4251.md  audit-4252.md  audit-4253.md  audit-4254.md  audit-design.md  audit-dsohowto.md  audit-hardening.md  client.c  design-channel-io-api.md  deucessh-algorithms.h  deucessh-arch.h  deucessh-auth.h  deucessh-comp.h  deucessh-conn.h  deucessh-crypto.h  deucessh-enc.h  deucessh-kex.h  deucessh-key-algo.h  deucessh-lang.h  deucessh-mac.h  deucessh-portable.h  deucessh.h  deucessh.pc.in  deucesshConfig.cmake  deucesshConfig.cmake.in  portable.h  server.c  ssh-arch.c  ssh-arch.h  (+11 more)
src/stp/: make.bat  stp.c  zmodem.c  zmodem.h
src/syncdraw/: CMakeLists.txt  GNUmakefile  INSTALL  Makefile  README  TDF_FORMAT  TODO  attrs.h  block.c  block.h  buildfont.c  config.c  config.h  crt.c  crt.h  draw.c  draw.h  effekt.c  effekt.h  fonts.c  fonts.h  fontutil.c  help.c  help.h  homedir.c  homedir.h  key.c  key.h  load.c  load.h  mdraw.c  mdraw.h  menue.c  menue.h  miscfunctions.c  miscfunctions.h  objects.mk  options.c  options.h  sauce.c  (+11 more)
src/syncterm/: .astylerc  .clang-format  .indent.pro  .nexrc  CHANGES  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.top  COMPILING  DarwinWrappers.h  DarwinWrappers.m  FBSD-mingw64.cmake  GNUmakefile  GNUmakefile.top  HACKING.md  Info.plist  Install-Mozilla.txt  Install-Win32.txt  LICENCE  Makefile  Manual.txt  Notes For Macintosh Users.rtf  PackageInfo.in  SyncTERM.icns  SyncTERM.sln  SyncTERM.vcxproj  TODO-mouse.txt  TODO.txt  Themes.adoc  Wren.adoc  WrenTODO.md  amigafont.h  ansi_filter.c  ansi_filter.h  audio_apc.c  audio_apc.h  bbslist.c  bbslist.h  bbslist_model.c  bbslist_model.h  (+167 more)
src/tith/: .gitignore  GNUmakefile  README.md  base64.c  base64.h  nodelist.c  tith-bundle.c  tith-client.c  tith-client.h  (+17 more)
(+8262 files in other folders)
