project (Synchronet C CXX)

cmake_minimum_required(VERSION 2.8.11)

INCLUDE(build/SynchronetMacros.cmake)

if(NOT PROJECTS)
	SET(PROJECTS SyncTERM;SyncDraw;SExPOTS;Tone;SBBS3;CIOXtrn;Chat;SBBSCtrl;GTKChat;GTKMonitor;GTKUserEdit;GTKUserList;SCFG;SyncView;UEdit;UMonitor CACHE STRING "Choose the projects to build" FORCE)
endif()

macro(add_subdirs)
	foreach(ARG IN ITEMS ${ARGV})
		string(TOUPPER ${ARG} UC_ARG)
		list(FIND ADDED ${UC_ARG} FOUND)
		if(${FOUND} EQUAL -1)
			add_subdirectory(${ARG})
			list(APPEND ADDED ${UC_ARG})
		endif()
	endforeach()
endmacro()

add_subdirs(xpdev conio uifc smblib comio)
foreach(PROJECT IN ITEMS ${PROJECTS})
	if(${PROJECT} STREQUAL SBBS3)
		add_subdirectory(sbbs3)
	endif()
	if(${PROJECT} STREQUAL SyncTERM)
		add_subdirectory(syncterm)
	endif()
	if(${PROJECT} STREQUAL SyncDraw)
		add_subdirectory(syncdraw)
	endif()
	if(${PROJECT} STREQUAL SExPOTS)
		add_subdirectory(sexpots)
	endif()
	if(${PROJECT} STREQUAL Tone)
		add_subdirectory(tone)
	endif()
	if(${PROJECT} STREQUAL CIOXtrn)
		add_subdirectory(cioxtrn)
	endif()
	if(${PROJECT} STREQUAL Chat)
		add_subdirectory(sbbs3/chat)
	endif()
	if(${PROJECT} STREQUAL SBBSCtrl)
		add_subdirectory(sbbs3/ctrl)
	endif()
	if(${PROJECT} STREQUAL GTKChat)
		add_subdirectory(sbbs3/gtkchat)
	endif()
	if(${PROJECT} STREQUAL GTKMonitor)
		add_subdirectory(sbbs3/gtkmonitor)
	endif()
	if(${PROJECT} STREQUAL GTKUserEdit)
		add_subdirectory(sbbs3/gtkuseredit)
	endif()
	if(${PROJECT} STREQUAL GTKUserList)
		add_subdirectory(sbbs3/gtkuserlist)
	endif()
	if(${PROJECT} STREQUAL SCFG)
		add_subdirectory(sbbs3/scfg)
	endif()
	if(${PROJECT} STREQUAL SyncView)
		add_subdirectory(sbbs3/syncview)
	endif()
	if(${PROJECT} STREQUAL UEdit)
		add_subdirectory(sbbs3/uedit)
	endif()
	if(${PROJECT} STREQUAL UMonitor)
		add_subdirectory(sbbs3/umonitor)
	endif()
endforeach()
