project (Synchronet C CXX)

cmake_minimum_required(VERSION 2.8.11)

INCLUDE(build/SynchronetMacros.cmake)

add_subdirectory(xpdev)
add_subdirectory(conio)
add_subdirectory(uifc)
add_subdirectory(smblib)
add_subdirectory(comio)
add_subdirectory(sbbs3)
add_subdirectory(syncterm)
add_subdirectory(syncdraw)
add_subdirectory(sexpots)
add_subdirectory(tone)
add_subdirectory(cioxtrn)
add_subdirectory(sbbs3/chat)
add_subdirectory(sbbs3/ctrl)
add_subdirectory(sbbs3/gtkchat)
add_subdirectory(sbbs3/gtkmonitor)
add_subdirectory(sbbs3/gtkuseredit)
add_subdirectory(sbbs3/gtkuserlist)
add_subdirectory(sbbs3/scfg)
add_subdirectory(sbbs3/syncview)
add_subdirectory(sbbs3/uedit)
add_subdirectory(sbbs3/umonitor)
